# Requestor

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/app/: environment_injector.rs  request_method.rs  request_sender.rs  resource.rs  syntax_highlighting.rs  syntax_highlighting_advanced.rs  tab_state.rs  tab_viewer.rs
src/history_item/: history_item.rs  history_item_widget.rs  mod.rs
src/ui/: mod.rs  ui_body.rs  ui_headers.rs  ui_history.rs  ui_query_params.rs  ui_response.rs  ui_url.rs
